# distilled-world-model

./: .env.example  .gitignore  CAPABILITY_PROGRESSION.md  CRITICAL_MILESTONES.md  DEMO_MILESTONES.md  DISTILLATION_GUIDE.md  FUNCTIONAL_MILESTONES.md  GETTING_STARTED_ENHANCED.md  IMPLEMENTATION_STATUS.md  MILESTONE1_TEST_RESULTS.md  MILESTONE2_TEST_RESULTS.md  MILESTONE3_TEST_RESULTS.md  MILESTONES.md  MILESTONE_INTERACTIVE_MVP.md  MILESTONE_SUMMARY.md  PROJECT_PLAN.md  PR_DRAFT_INTERACTIVE_MVP.md  README.md  ROADMAP.md  adjust_memory_settings.py  create_world_model.py  demo_enhanced_features.py  install.sh  pyproject.toml  requirements.txt  run.py  run_tests_with_docs.py  run_with_override.py  setup.py  test_demo_components.py  test_milestone1.py  test_milestone3_simple.py  test_model_simple.py  view_results.html
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: add_to_project.yml  ci.yml
configs/: cc_platformers.yaml
datasets/youtube/: cc_metadata.jsonl  test_metadata.jsonl
demo/: app.js  index.html  index.old.html  style.css
scripts/: batch_collect.py  collect_data.py  create_mvp_issues.sh  dedupe_metadata.py  quick_train.py  smoke.sh  youtube_collector.py
src/: __init__.py  config.py  demo_reconstruction.py  demo_sequence.py  demo_temporal.py  train_sequence.py  train_temporal.py
src/api/: enhanced_server.py  model_loading.py  server.py
src/data/: game_dataset.py  sequence_dataset.py  temporal_dataset.py
src/inference/: engine.py  predictive_engine.py  smart_batching.py  toy_world.py
src/models/: dynamics.py  enhanced_world_model.py  improved_vqvae.py  optimized_dynamics.py  sequence_generator.py  temporal_predictor.py
src/training/: cli.py  train.py
src/utils/: adaptive_quality.py  error_recovery.py  exceptions.py  logging.py  memory_manager.py  session_recovery.py
test_outputs/: milestone2_simple_test.json
(+12 files in other folders)
